# subito

./: .gitignore  example.py  pyproject.toml
subito/: __init__.py  subito.py  utils.py
subito/db/: database.py  queue.py
subito/operations/: operation.py  subscription.py
tests/: test_subito.py
