[tool.poetry]
name = "subito"
version = "0.1.2"
description = "Quickly create stateless microservices based on GraphQL subscription messages."
authors = ["Milos Grujic <srbiotik@gmail.com>"]
repository = "https://github.com/srbiotik/subito"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tinydb = "^4.1.1"
gql = {version = "^3.0.0-alpha.1", allow-prereleases = true}
python-box = {version = "^5.1.1", allow-prereleases = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-dotenv = "^0.5.2"
pytest-asyncio = "^0.14.0"
black = "^20.8b1"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
